daseen/src/index.css
/* ... */
hr {
  border-top: 2px solid var(--color-light-gray) !important;
  opacity: 1 !important;
}


p {
  margin-bottom: .3rem !important;
}

.nav-tabs {
  white-space: nowrap !important;
  flex-wrap: nowrap !important;
  overflow: auto;
  overflow-y: hidden;
  -ms-overflow-y: hidden;
}

p.two-words::after {
  content: "\A";
  white-space: pre;
}

#preferencesModal .nav-tabs .nav-link {
  font-size: 9.5pt !important;
  text-align: left !important;
  padding-left: .5rem !important;
  border: 0 !important;
  background-color: transparent !important;
}


#preferencesModal .nav-item:hover,
#preferencesModal .nav-item.active {
  background-color: #00000011 !important;
}

.table>:not(caption)>*>* {
  color: var(--color-text) !important;
}


.nav-tabs .nav-link {
  font-size: 9.5pt !important;
  text-align: left !important;
  padding-left: .5rem !important;
  border: 0 !important;
  background-color: transparent !important;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active,
.nav-tabs .nav-link:hover {
  color: var(--color-primary) !important;
}

.hover:hover {
  background-color: var(--color-light-gray);
}

.hover-lg:hover {
  background-color: #00000011 !important;
}

.table td,
.table th {
  padding: .5rem .3rem !important;
  font-size: 10.3pt !important;
  border: none !important;
}

.table th {
  font-weight: 500 !important;
}


.table-bordered>:not(caption)>* {
  border-color: var(--color-light-gray) !important;
}

.dt-info {
  color: var(--color-text-lighter) !important;
}

.btn {
  white-space: nowrap !important;
}

.btn-basic {
  background-color: var(--color-light-gray) !important;
}

.btn-basic:hover {
  background-color: var(--color-darker-gray) !important;
}

.pointer {
  cursor: pointer;
}

.next::marker,
.previous::marker {
  list-style: none !important;
}

.pagination-btn {
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
}

li.selected .pagination-btn,
.pagination-btn:hover {
  color: var(--color-primary-lighter) !important;
}

.dropdown-toggle::after {
  display: none !important;
}

.modal-content {
  border: none !important;
  background-color: var(--color-body-background) !important;
}

.active>.page-link,
.page-link.active {
  background-color: var(--color-primary) !important;
  border-color: var(--color-primary) !important;
}

.form-check-input:checked {
  background-color: var(--color-primary) !important;
  border-color: var(--color-primary) !important;
}

.rc-slider-track,
.rc-slider-tracks {
  background-color: var(--color-primary) !important;
}

.rc-slider-handle {
  border-color: var(--color-primary) !important;
  border-radius: 0 !important;
  width: 1px !important;
}

.w-33 {
  width: 33.33%;
}

.dropdown-item:hover {
  background-color: var(--color-light-gray) !important;
}

.dropdown-item:active {
  background-color: var(--color-primary) !important;
  color: white !important;
}

div.dt-container div.dt-search input {
  border-radius: .8rem !important;
  border: 1px solid var(--color-darker-gray) !important;
}

.dataset-attribute-tabs {
  display: flex;
  justify-content: space-between;
}

.dataset-attribute-tabs .nav-item {
  white-space: break-spaces !important;
  display: flex;
  align-items: end;
}

.dataset-attribute-tabs .nav-item .nav-link>span {
  display: flex;
  width: min-content;
  flex-wrap: wrap;
  white-space: break-spaces;
}

table.dataTable thead>tr>th.dt-orderable-asc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-orderable-asc span.dt-column-order:after,
table.dataTable thead>tr>th.dt-orderable-desc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-orderable-desc span.dt-column-order:after,
table.dataTable thead>tr>th.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-ordering-asc span.dt-column-order:after,
table.dataTable thead>tr>th.dt-ordering-desc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-ordering-desc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-orderable-asc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-orderable-asc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-orderable-desc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-orderable-desc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-ordering-asc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-ordering-desc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-ordering-desc span.dt-column-order:after {
  opacity: .5 !important;
}

table.dataTable thead>tr>th.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>th.dt-ordering-desc span.dt-column-order:after,
table.dataTable thead>tr>td.dt-ordering-asc span.dt-column-order:before,
table.dataTable thead>tr>td.dt-ordering-desc span.dt-column-order:after {
  opacity: 1 !important;
}


table.dataTable thead>tr>th.dt-orderable-asc,
table.dataTable thead>tr>th.dt-orderable-desc,
table.dataTable thead>tr>th.dt-ordering-asc,
table.dataTable thead>tr>th.dt-ordering-desc,
table.dataTable thead>tr>td.dt-orderable-asc,
table.dataTable thead>tr>td.dt-orderable-desc,
table.dataTable thead>tr>td.dt-ordering-asc,
table.dataTable thead>tr>td.dt-ordering-desc {
  position: relative;
  padding-right: 30px !important;
}

.form-control-sm {
  padding: .4rem .5rem !important;
}

.navIconModalToggleWrapper {
  border-radius: 50%;
  border: 1px solid var(--color-darker-gray);
  position: relative;
  width: 45px !important;
  height: 45px !important;
  background-color: transparent !important;
  cursor: 'pointer'
}

.card {
  border: none;
  border-radius: 1.3rem !important;
  background-color: var(--color-body-background) !important;
  color: var(--color-text-lighter) !important;
}

.card-img-top {
  border-top-left-radius: 1.3rem !important;
  border-top-right-radius: 1.3rem !important;
  width: 100% !important;
  object-fit: cover;
  overflow: hidden;
}
/* ... */

